--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,6 +10,7 @@
         android:maxHeight="0dp"
         android:scaleType="centerCrop"
         android:src="@drawable/backgrounddrawing" />
+
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -17,26 +18,36 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         tools:context=".activities.DashboardActivity"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/white_backgroung"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginVertical="40dp"
+        android:gravity="center">
+
+        <ImageView
+            android:layout_width="140dp"
+            android:layout_height="146.834dp"
+            android:src="@drawable/trustlogo_final"
+            android:layout_gravity="center"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Bienvenue"
-        android:textSize="40sp"
-        android:layout_marginTop="100dp"
-        android:layout_marginBottom="40dp"
+        android:textSize="38sp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="37dp"
         android:layout_marginHorizontal="35dp"
         android:textColor="@color/black"
         android:fontFamily="@font/aleo"
         android:textStyle="bold"
+        android:layout_gravity="center"
         />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
-        android:layout_marginHorizontal="26dp"
+        android:layout_marginHorizontal="20dp"
         android:hint="Adresse e-mail"
         style="@style/MyTextInputLayout" >
 
@@ -57,8 +68,8 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
-        android:layout_marginHorizontal="26dp"
+        android:layout_marginTop="13dp"
+        android:layout_marginHorizontal="20dp"
         android:hint="Mot de passe"
         style="@style/MyTextInputLayout" >
 
@@ -83,7 +94,7 @@
             android:text="Connexion"
             android:textSize="19sp"
             android:layout_marginHorizontal="50dp"
-            android:layout_marginTop="42dp"
+            android:layout_marginTop="37dp"
             android:paddingVertical="10dp"
             android:paddingHorizontal="30dp"
             android:layout_gravity="center"
@@ -100,12 +111,11 @@
             android:layout_height="wrap_content"
             android:text="Mot de passe oublié ?"
             android:textSize="15sp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_marginHorizontal="40dp"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
-            android:layout_gravity="end"
-            android:textStyle="bold"
+            android:layout_gravity="center"
             />
 
     <LinearLayout
@@ -123,7 +133,6 @@
             android:layout_marginEnd="5dp"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
-            android:textStyle="bold"
             />
 
         <TextView
@@ -139,5 +148,5 @@
             />
     </LinearLayout>
 
-    </LinearLayout>
+</LinearLayout>
 </FrameLayout>
