--- a/app/src/main/res/layout/activity_demande_details.xml
+++ b/app/src/main/res/layout/activity_demande_details.xml
@@ -50,7 +50,6 @@
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:textStyle="bold"
-            android:text="Test"
             />
 
         <TextView
@@ -75,8 +74,7 @@
             android:layout_marginTop="0dp"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
-            android:textStyle="bold"
-            app:drawableEndCompat="@drawable/edit" />
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="match_parent"
@@ -100,8 +98,7 @@
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:background="@drawable/input_background"
-            android:paddingHorizontal="20dp"
-            android:paddingVertical="15dp"
+            android:padding="15dp"
             android:textStyle="bold"
             />
 
@@ -127,8 +124,7 @@
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:background="@drawable/input_background"
-            android:paddingHorizontal="20dp"
-            android:paddingVertical="15dp"
+            android:padding="15dp"
             android:textStyle="bold"
             />
 
@@ -166,8 +162,7 @@
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:background="@drawable/input_background"
-            android:paddingHorizontal="20dp"
-            android:paddingVertical="15dp"
+            android:padding="15dp"
             android:textStyle="bold"
             />
 
@@ -193,8 +188,7 @@
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:background="@drawable/input_background"
-            android:paddingHorizontal="20dp"
-            android:paddingVertical="15dp"
+            android:padding="15dp"
             android:textStyle="bold"
             />
 
@@ -220,8 +214,7 @@
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:background="@drawable/input_background"
-            android:paddingHorizontal="20dp"
-            android:paddingVertical="15dp"
+            android:padding="15dp"
             android:textStyle="bold"
             />
 
@@ -247,8 +240,7 @@
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:background="@drawable/input_background"
-            android:paddingHorizontal="20dp"
-            android:paddingVertical="15dp"
+            android:padding="15dp"
             android:textStyle="bold"
             />
 
@@ -274,8 +266,7 @@
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
             android:background="@drawable/input_background"
-            android:paddingHorizontal="20dp"
-            android:paddingVertical="15dp"
+            android:padding="15dp"
             android:textStyle="bold"
             />
 
@@ -316,7 +307,7 @@
             android:gravity="start|center_vertical"
             android:background="@drawable/up_down_background"
             android:drawableEnd="@drawable/download"
-            android:paddingHorizontal="22dp"
+            android:paddingHorizontal="18dp"
             android:paddingVertical="15dp"
             android:textAllCaps="false"
             android:textStyle="bold"
@@ -347,7 +338,7 @@
             android:gravity="start|center_vertical"
             android:background="@drawable/up_down_background"
             android:drawableEnd="@drawable/download"
-            android:paddingHorizontal="22dp"
+            android:paddingHorizontal="18dp"
             android:paddingVertical="15dp"
             android:textAllCaps="false"
             android:textStyle="bold"
@@ -378,7 +369,7 @@
             android:gravity="start|center_vertical"
             android:background="@drawable/up_down_background"
             android:drawableEnd="@drawable/download"
-            android:paddingHorizontal="22dp"
+            android:paddingHorizontal="18dp"
             android:paddingVertical="15dp"
             android:textAllCaps="false"
             android:textStyle="bold"
@@ -409,7 +400,7 @@
             android:gravity="start|center_vertical"
             android:background="@drawable/up_down_background"
             android:drawableEnd="@drawable/download"
-            android:paddingHorizontal="22dp"
+            android:paddingHorizontal="18dp"
             android:paddingVertical="15dp"
             android:textAllCaps="false"
             android:textStyle="bold"
