--- a/app/src/main/res/layout/activity_demande_details.xml
+++ b/app/src/main/res/layout/activity_demande_details.xml
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:layout_marginHorizontal="50dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginVertical="10dp"
             android:layout_gravity="end"
             android:textColor="@color/black"
             android:fontFamily="@font/aleo"
