--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -122,7 +122,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginBottom="40dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -149,4 +150,15 @@
     </LinearLayout>
 
 </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="\@Copyright 2024 Thiqa - All rights reserved."
+        android:fontFamily="@font/aleo"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:textSize="12sp"
+        android:layout_gravity="bottom"/>
+
 </FrameLayout>
