--- a/app/src/main/res/layout/activity_support.xml
+++ b/app/src/main/res/layout/activity_support.xml
@@ -55,7 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="En cas de problème, vous pouvez nous contactez via e-mail"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:layout_marginBottom="10dp"
             android:layout_marginHorizontal="45dp"
             android:textColor="@color/black"
@@ -107,9 +107,9 @@
         android:id="@+id/send_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Envoyer"
-        android:textSize="19sp"
-        android:drawableRight="@drawable/send"
+        android:text="Envoyer  "
+        android:textSize="17sp"
+        android:drawableEnd="@drawable/send"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
         android:layout_marginHorizontal="30dp"
@@ -131,20 +131,21 @@
         android:fontFamily="@font/aleo"
         android:text="Ou vous pouvez nous contactez via téléphone"
         android:textColor="@color/black"
-        android:textSize="20sp" />
+        android:textSize="16sp" />
 
     <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/telephone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="012345678"
-            android:textSize="19sp"
-            android:drawableLeft="@drawable/phone"
-            android:layout_marginTop="20dp"
+            android:text="  012345678"
+            android:textSize="17sp"
+            android:drawableStart="@drawable/phone"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="50dp"
             android:layout_marginHorizontal="50dp"
             android:paddingVertical="10dp"
-            android:paddingHorizontal="20dp"
+            android:paddingStart="15dp"
+            android:paddingEnd="20dp"
             android:background="@drawable/submit_button"
             android:layout_gravity="center"
             android:textColor="#fff"
