--- a/app/src/main/res/layout/activity_demande.xml
+++ b/app/src/main/res/layout/activity_demande.xml
@@ -292,11 +292,12 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-        android:layout_marginTop="23dp">
+        android:layout_marginTop="23dp"
+        android:layout_marginHorizontal="25dp">
 
     <CheckBox
         android:id="@+id/declaration"
-        android:layout_width="300dp"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:text="Je déclare que toutes les informations fournies sont exactes et conformes aux conditions de création de registre de commerce."
         android:layout_gravity="center"
