--- a/app/src/main/res/layout/activity_support.xml
+++ b/app/src/main/res/layout/activity_support.xml
@@ -77,7 +77,8 @@
             android:paddingVertical="15dp"
             android:fontFamily="@font/aleo"
             android:textColorHint="#666"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:inputType="textCapSentences" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -99,7 +100,9 @@
             android:fontFamily="@font/aleo"
             android:textColorHint="#666"
             android:textStyle="bold"
-            android:gravity="start"/>
+            android:gravity="start"
+            android:inputType="textCapSentences|textMultiLine"
+            android:imeOptions="actionNone|flagNoEnterAction"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
