--- a/app/src/main/res/layout/expandable_text_view.xml
+++ b/app/src/main/res/layout/expandable_text_view.xml
@@ -6,20 +6,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
-        android:textSize="21sp"
+        android:textSize="18sp"
         android:layout_marginTop="15dp"
-        android:layout_marginHorizontal="45dp"
+        android:layout_marginHorizontal="30dp"
         android:fontFamily="@font/aleo"
         android:drawableRight="@drawable/drop_down"
     />
 
     <TextView
         android:id="@+id/answerTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:textColor="@color/black"
-        android:textSize="19sp"
-        android:layout_marginTop="15dp"
+        android:textSize="18sp"
+        android:layout_marginTop="5dp"
         android:layout_marginHorizontal="50dp"
         android:fontFamily="@font/aleo"
         android:visibility="gone"
